# CNN-C-

./: .gitignore  CMakeLists.txt  README.md
examples/: main.cpp
include/cnn/: sequential.hpp  tensor.hpp
include/cnn/backend/: cpu_ops.hpp
include/cnn/layers/: conv2d.hpp  dense.hpp  flatten.hpp  layer.hpp  max_pool2d.hpp  relu.hpp  softmax.hpp
src/: sequential.cpp  tensor.cpp
src/backend/: cpu_ops.cpp
src/layers/: conv2d.cpp  dense.cpp  flatten.cpp  max_pool2d.cpp  relu.cpp  softmax.cpp
